Overlap issue fixed

--- a/src/sccs/styles.scss
+++ b/src/sccs/styles.scss
@@ -23,8 +23,9 @@ body{
 
 
 p{
-    display: inline-block;
     color:white;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
 }
 
 .lds-dual-ring {
